# zlib-accel

./: .gitignore  CMakeLists.txt  README.md  common.cmake  iaa.cpp  iaa.h  logging.h  qat.cpp  qat.h  sharded_map.h  statistics.cpp  statistics.h  utils.cpp  utils.h  zlib_accel.cpp  zlib_accel.h
.github/workflows/: clang_build.yml  tests.yml  tests_clang.yml  tests_log_stats.yml
config/: config.cpp  config.h  config_reader.cpp  config_reader.h  default_config
fuzzing/: CMakeLists.txt  zlib_accel_fuzz.cpp
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h  zlib_accel_test.cpp
